tools/hangar/src/__snapshots__/invalid.test.ts.snap
// Vitest Snapshot v1

exports[`access_hidden_namespace.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Unknown symbol \\"core\\"
  --> ../../../../examples/tests/invalid/access_hidden_namespace.w:7:5
  |
7 | new core.NodeJsCode(\\"/tmp/test.txt\\"); // This should fail even though \`fs.TextFile\` extends \`core.FileBase\` because we didn't bring in \`core\` explicitly.
  |     ^^^^ Unknown symbol \\"core\\"

"
`;

exports[`access_static_from_instance.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Static class fields not supported yet, see https://github.com/winglang/wing/issues/1668
  --> ../../../../examples/tests/invalid/access_static_from_instance.w:4:3
  |
4 |   static f: num;
  |   ^^^^^^^^^^^^^^ Static class fields not supported yet, see https://github.com/winglang/wing/issues/1668


error: Cannot access static property \\"f\\" from instance
   --> ../../../../examples/tests/invalid/access_static_from_instance.w:19:5
   |
19 | foo.f; // Can't access static fields through instances
   |     ^ Cannot access static property \\"f\\" from instance


error: Cannot access static property \\"m\\" from instance
   --> ../../../../examples/tests/invalid/access_static_from_instance.w:20:5
   |
20 | foo.m(); // Can't access static methods through instances
   |     ^ Cannot access static property \\"m\\" from instance


error: Unknown symbol \\"this\\"
  --> ../../../../examples/tests/invalid/access_static_from_instance.w:7:5
  |
7 |     this.instance_field = 1; // Can't access instance fields from static methods
  |     ^^^^ Unknown symbol \\"this\\"


error: Variable this.instance_field is not reassignable 
  --> ../../../../examples/tests/invalid/access_static_from_instance.w:7:5
  |
7 |     this.instance_field = 1; // Can't access instance fields from static methods
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ Variable this.instance_field is not reassignable 


error: Unknown symbol \\"this\\"
  --> ../../../../examples/tests/invalid/access_static_from_instance.w:8:5
  |
8 |     this.f = 1; // Can't access static fields through \`this\`
  |     ^^^^ Unknown symbol \\"this\\"


error: Variable this.f is not reassignable 
  --> ../../../../examples/tests/invalid/access_static_from_instance.w:8:5
  |
8 |     this.f = 1; // Can't access static fields through \`this\`
  |     ^^^^^^^^^^^ Variable this.f is not reassignable 

"
`;

exports[`break_scope_invalid.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Expected break statement to be inside of a loop (while/for)
  --> ../../../../examples/tests/invalid/break_scope_invalid.w:3:5
  |
3 |     break;
  |     ^^^^^^ Expected break statement to be inside of a loop (while/for)


error: Expected break statement to be inside of a loop (while/for)
  --> ../../../../examples/tests/invalid/break_scope_invalid.w:7:5
  |
7 |     break;
  |     ^^^^^^ Expected break statement to be inside of a loop (while/for)

"
`;

exports[`bring.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Redundant bring of \\"std\\"
  --> ../../../../examples/tests/invalid/bring.w:1:1
  |
1 | bring std;
  | ^^^^^^^^^^ Redundant bring of \\"std\\"

"
`;

exports[`bring_jsii.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: bring \\"jsii-code-samples\\" must be assigned to an identifier (e.g. bring \\"foo\\" as foo)
  --> ../../../../examples/tests/invalid/bring_jsii.w:1:1
  |
1 | bring \\"jsii-code-samples\\";
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ bring \\"jsii-code-samples\\" must be assigned to an identifier (e.g. bring \\"foo\\" as foo)


error: Cannot find module \\"foobar\\" in source directory
  --> ../../../../examples/tests/invalid/bring_jsii.w:4:1
  |
4 | bring \\"foobar\\" as baz;
  | ^^^^^^^^^^^^^^^^^^^^^^ Cannot find module \\"foobar\\" in source directory

"
`;

exports[`capture_mutables.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Unknown symbol \\"size\\"
   --> ../../../../examples/tests/invalid/capture_mutables.w:14:19
   |
14 |   assert(a_cloned.size == 1);
   |                   ^^^^ Unknown symbol \\"size\\"


error: Cannot reference 'a' of type 'MutArray<str>' from an inflight context
  --> ../../../../examples/tests/invalid/capture_mutables.w:8:10
  |
8 |   assert(a.length == 1);
  |          ^ Cannot reference 'a' of type 'MutArray<str>' from an inflight context


error: Cannot reference 's' of type 'MutSet<num>' from an inflight context
   --> ../../../../examples/tests/invalid/capture_mutables.w:10:10
   |
10 |   assert(s.size == 1);
   |          ^ Cannot reference 's' of type 'MutSet<num>' from an inflight context


error: Cannot reference 'm' of type 'MutMap<bool>' from an inflight context
   --> ../../../../examples/tests/invalid/capture_mutables.w:12:10
   |
12 |   assert(m.size() == 1);
   |          ^ Cannot reference 'm' of type 'MutMap<bool>' from an inflight context


error: Cannot reference 'a_cloned' of type 'MutArray<str>' from an inflight context
   --> ../../../../examples/tests/invalid/capture_mutables.w:14:10
   |
14 |   assert(a_cloned.size == 1);
   |          ^^^^^^^^ Cannot reference 'a_cloned' of type 'MutArray<str>' from an inflight context

"
`;

exports[`capture_reassignable.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Cannot capture a reassignable variable \\"x\\"
  --> ../../../../examples/tests/invalid/capture_reassignable.w:6:17
  |
6 |     print(\\"x: \${x}\\");
  |                 ^ Cannot capture a reassignable variable \\"x\\"

"
`;

exports[`cloud_function_expects_inflight.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Expected type to be \\"inflight (any): any\\", but got \\"preflight (str): str\\" instead
  --> ../../../../examples/tests/invalid/cloud_function_expects_inflight.w:3:20
  |  
3 |   new cloud.Function((name: str): str => {
  | /--------------------^
4 | |     return \\"Hello \${name}\\";
5 | | });
  | \\\\-^ Expected type to be \\"inflight (any): any\\", but got \\"preflight (str): str\\" instead

"
`;

exports[`container_types.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Unknown parser error.
   --> ../../../../examples/tests/invalid/container_types.w:10:24
   |
10 | let m2: Map<num> = [\\"a\\":1, \\"b\\":\\"2\\", \\"c\\":3];
   |                        ^^ Unknown parser error.


error: Unexpected 'string'.
   --> ../../../../examples/tests/invalid/container_types.w:10:28
   |
10 | let m2: Map<num> = [\\"a\\":1, \\"b\\":\\"2\\", \\"c\\":3];
   |                            ^^^ Unexpected 'string'.


error: Unknown parser error.
   --> ../../../../examples/tests/invalid/container_types.w:10:40
   |
10 | let m2: Map<num> = [\\"a\\":1, \\"b\\":\\"2\\", \\"c\\":3];
   |                                        ^^ Unknown parser error.


error: Expected type to be \\"num\\", but got \\"str\\" instead
  --> ../../../../examples/tests/invalid/container_types.w:2:28
  |
2 | let arr1: Array<num> = [1, \\"2\\", 3];
  |                            ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected \\"Set\\" type, found \\"Array<num>\\"
  --> ../../../../examples/tests/invalid/container_types.w:3:12
  |
3 | let arr2 = Array<num> {1, 2, 3};
  |            ^^^^^^^^^^^^^^^^^^^^ Expected \\"Set\\" type, found \\"Array<num>\\"


error: Expected type to be \\"Array<num>\\", but got \\"Array<str>\\" instead
  --> ../../../../examples/tests/invalid/container_types.w:5:24
  |
5 | let arr4: Array<num> = arr3;
  |                        ^^^^ Expected type to be \\"Array<num>\\", but got \\"Array<str>\\" instead


error: Unknown symbol \\"some_random_method\\"
  --> ../../../../examples/tests/invalid/container_types.w:6:6
  |
6 | arr1.some_random_method();
  |      ^^^^^^^^^^^^^^^^^^ Unknown symbol \\"some_random_method\\"


error: Expected type to be \\"num\\", but got \\"str\\" instead
  --> ../../../../examples/tests/invalid/container_types.w:9:32
  |
9 | let m1: Map<num> = {\\"a\\":1, \\"b\\":\\"2\\", \\"c\\":3};
  |                                ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected type to be \\"Map<num>\\", but got \\"Array<str>\\" instead
   --> ../../../../examples/tests/invalid/container_types.w:10:20
   |
10 | let m2: Map<num> = [\\"a\\":1, \\"b\\":\\"2\\", \\"c\\":3];
   |                    ^^^^^^^^^^^^^^^^^^^^^^^ Expected type to be \\"Map<num>\\", but got \\"Array<str>\\" instead


error: Expected type to be \\"Map<num>\\", but got \\"Map<str>\\" instead
   --> ../../../../examples/tests/invalid/container_types.w:12:20
   |
12 | let m4: Map<num> = m3;m1.some_random_method();
   |                    ^^ Expected type to be \\"Map<num>\\", but got \\"Map<str>\\" instead


error: Unknown symbol \\"some_random_method\\"
   --> ../../../../examples/tests/invalid/container_types.w:12:26
   |
12 | let m4: Map<num> = m3;m1.some_random_method();
   |                          ^^^^^^^^^^^^^^^^^^ Unknown symbol \\"some_random_method\\"


error: Expected type to be \\"num\\", but got \\"str\\" instead
   --> ../../../../examples/tests/invalid/container_types.w:15:24
   |
15 | let s1: Set<num> = {1, \\"2\\", 3};
   |                        ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected \\"Array\\" type, found \\"Set<num>\\"
   --> ../../../../examples/tests/invalid/container_types.w:16:10
   |
16 | let s2 = Set<num> [1, \\"2\\", 3];
   |          ^^^^^^^^^^^^^^^^^^^^ Expected \\"Array\\" type, found \\"Set<num>\\"


error: Expected type to be \\"num\\", but got \\"str\\" instead
   --> ../../../../examples/tests/invalid/container_types.w:17:24
   |
17 | let s3: Set<num> = [1, \\"2\\", 3];
   |                        ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected type to be \\"Set<num>\\", but got \\"Array<num>\\" instead
   --> ../../../../examples/tests/invalid/container_types.w:17:20
   |
17 | let s3: Set<num> = [1, \\"2\\", 3];
   |                    ^^^^^^^^^^^ Expected type to be \\"Set<num>\\", but got \\"Array<num>\\" instead


error: Expected type to be \\"Set<str>\\", but got \\"Set<num>\\" instead
   --> ../../../../examples/tests/invalid/container_types.w:19:20
   |
19 | let s5: Set<str> = s4;
   |                    ^^ Expected type to be \\"Set<str>\\", but got \\"Set<num>\\" instead


error: Unknown symbol \\"some_random_method\\"
   --> ../../../../examples/tests/invalid/container_types.w:20:4
   |
20 | s1.some_random_method();
   |    ^^^^^^^^^^^^^^^^^^ Unknown symbol \\"some_random_method\\"

"
`;

exports[`enums.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Enum \\"SomeEnum\\" does not contain value \\"FOUR\\"
  --> ../../../../examples/tests/invalid/enums.w:5:21
  |
5 | let four = SomeEnum.FOUR;
  |                     ^^^^ Enum \\"SomeEnum\\" does not contain value \\"FOUR\\"


error: Expression must be a class or resource instance to access property \\"TWO\\", instead found type \\"SomeEnum\\"
  --> ../../../../examples/tests/invalid/enums.w:8:11
  |
8 | let two = SomeEnum.TWO.TWO;
  |           ^^^^^^^^^^^^ Expression must be a class or resource instance to access property \\"TWO\\", instead found type \\"SomeEnum\\"

"
`;

exports[`for_loop.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Unable to iterate over \\"Bucket\\"
  --> ../../../../examples/tests/invalid/for_loop.w:5:13
  |
5 | for test in bucket {
  |             ^^^^^^ Unable to iterate over \\"Bucket\\"

"
`;

exports[`immutable_container_types.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Unknown symbol \\"set\\"
  --> ../../../../examples/tests/invalid/immutable_container_types.w:3:4
  |
3 | m1.set(\\"a\\", \\"bye\\");
  |    ^^^ Unknown symbol \\"set\\"

"
`;

exports[`inflight_in_class.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Class cannot have inflight fields
  --> ../../../../examples/tests/invalid/inflight_in_class.w:3:3
  |
3 |   inflight field: num; // No inflight fields in classes (only in resources)
  |   ^^^^^^^^ Class cannot have inflight fields

"
`;

exports[`inflight_ref_invalid.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Unable to reference \\"this.reassignable\\" from inflight method \\"test\\" because it is reassignable (\\"var\\")
   --> ../../../../examples/tests/invalid/inflight_ref_invalid.w:12:19
   |
12 |     print(\\"\${this.reassignable}\\");
   |                   ^^^^^^^^^^^^ Unable to reference \\"this.reassignable\\" from inflight method \\"test\\" because it is reassignable (\\"var\\")


error: Unable to reference \\"this.mut_array\\" from inflight method \\"test\\" because type MutArray<str> is not capturable
   --> ../../../../examples/tests/invalid/inflight_ref_invalid.w:14:16
   |
14 |     print(this.mut_array.at(0));
   |                ^^^^^^^^^ Unable to reference \\"this.mut_array\\" from inflight method \\"test\\" because type MutArray<str> is not capturable

"
`;

exports[`inflight_ref_resource_sub_field.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Unable to reference \\"my_queue.push\\" from inflight method \\"test\\" because it is not an inflight method
   --> ../../../../examples/tests/invalid/inflight_ref_resource_sub_field.w:26:10
   |
26 |     this.another.my_queue.push(\\"message\\");
   |          ^^^^^^^ Unable to reference \\"my_queue.push\\" from inflight method \\"test\\" because it is not an inflight method

"
`;

exports[`json.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Expected type to be \\"str\\", but got \\"Json\\" instead
  --> ../../../../examples/tests/invalid/json.w:5:14
  |
5 | let s: str = j;
  |              ^ Expected type to be \\"str\\", but got \\"Json\\" instead


error: Expected type to be \\"num\\", but got \\"Json\\" instead
  --> ../../../../examples/tests/invalid/json.w:7:14
  |
7 | let n: num = j;
  |              ^ Expected type to be \\"num\\", but got \\"Json\\" instead


error: Expected type to be \\"bool\\", but got \\"Json\\" instead
  --> ../../../../examples/tests/invalid/json.w:9:15
  |
9 | let b: bool = j;
  |               ^ Expected type to be \\"bool\\", but got \\"Json\\" instead


error: Expected type to be \\"Map<str>\\", but got \\"Json\\" instead
   --> ../../../../examples/tests/invalid/json.w:11:19
   |
11 | let m: Map<str> = j;
   |                   ^ Expected type to be \\"Map<str>\\", but got \\"Json\\" instead


error: Expected type to be \\"Set<str>\\", but got \\"Json\\" instead
   --> ../../../../examples/tests/invalid/json.w:13:20
   |
13 | let s2: Set<str> = j;
   |                    ^ Expected type to be \\"Set<str>\\", but got \\"Json\\" instead


error: Expected type to be \\"Array<str>\\", but got \\"Json\\" instead
   --> ../../../../examples/tests/invalid/json.w:15:21
   |
15 | let a: Array<str> = j;
   |                     ^ Expected type to be \\"Array<str>\\", but got \\"Json\\" instead


error: Unknown symbol \\"set\\"
   --> ../../../../examples/tests/invalid/json.w:20:14
   |
20 | forever_json.set(\\"a\\", \\"world!\\");
   |              ^^^ Unknown symbol \\"set\\"

"
`;

exports[`missing_semicolon.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Syntax error
   --> ../../../../examples/tests/invalid/missing_semicolon.w:7:1
   |  
 7 | / q1.on_message(inflight (m:str): str => {
 8 | |   b.put(\\"1.txt\\", \\"Hello, \${m}\\"); 
 9 | | })
10 | | 
11 | | q2.on_message(inflight (m:str): str => {
   | \\\\-------------^ Syntax error


error: Unexpected 'identifier'.
   --> ../../../../examples/tests/invalid/missing_semicolon.w:11:1
   |
11 | q2.on_message(inflight (m:str): str => {
   | ^^ Unexpected 'identifier'.


error: ';' expected.
   --> ../../../../examples/tests/invalid/missing_semicolon.w:16:24
   |
16 | //       ^ ';' expected
   |                        ^ ';' expected.


error: '}' expected.
   --> ../../../../examples/tests/invalid/missing_semicolon.w:19:28
   |
19 | //           ^ '}' expected
   |                            ^ '}' expected.

"
`;

exports[`mut_container_types.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Expected type to be \\"num\\", but got \\"str\\" instead
  --> ../../../../examples/tests/invalid/mut_container_types.w:2:29
  |
2 | let arr1 = MutArray<num>[1, \\"2\\", 3];
  |                             ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected \\"Set\\" type, found \\"MutArray<num>\\"
  --> ../../../../examples/tests/invalid/mut_container_types.w:3:12
  |
3 | let arr2 = MutArray<num>{1, 2, 3};
  |            ^^^^^^^^^^^^^^^^^^^^^^ Expected \\"Set\\" type, found \\"MutArray<num>\\"


error: Expected type to be \\"MutArray<num>\\", but got \\"Array<num>\\" instead
  --> ../../../../examples/tests/invalid/mut_container_types.w:4:27
  |
4 | let arr3: MutArray<num> = [1, 2, 3]; // https://github.com/winglang/wing/issues/1117
  |                           ^^^^^^^^^ Expected type to be \\"MutArray<num>\\", but got \\"Array<num>\\" instead


error: Expected type to be \\"MutArray<num>\\", but got \\"MutArray<str>\\" instead
  --> ../../../../examples/tests/invalid/mut_container_types.w:6:27
  |
6 | let arr5: MutArray<num> = arr4;
  |                           ^^^^ Expected type to be \\"MutArray<num>\\", but got \\"MutArray<str>\\" instead


error: Unknown symbol \\"some_method\\"
  --> ../../../../examples/tests/invalid/mut_container_types.w:7:6
  |
7 | arr1.some_method();
  |      ^^^^^^^^^^^ Unknown symbol \\"some_method\\"


error: Expected type to be \\"num\\", but got \\"str\\" instead
   --> ../../../../examples/tests/invalid/mut_container_types.w:10:25
   |
10 | let s1 = MutSet<num>{1, \\"2\\", 3};
   |                         ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected \\"Array\\" type, found \\"MutSet<num>\\"
   --> ../../../../examples/tests/invalid/mut_container_types.w:11:10
   |
11 | let s2 = MutSet<num>[1, \\"2\\", 3];
   |          ^^^^^^^^^^^^^^^^^^^^^^ Expected \\"Array\\" type, found \\"MutSet<num>\\"


error: Expected type to be \\"MutSet<num>\\", but got \\"Set<num>\\" instead
   --> ../../../../examples/tests/invalid/mut_container_types.w:12:23
   |
12 | let s3: MutSet<num> = {1, 1, 3}; // https://github.com/winglang/wing/issues/1117
   |                       ^^^^^^^^^ Expected type to be \\"MutSet<num>\\", but got \\"Set<num>\\" instead


error: Expected type to be \\"MutSet<num>\\", but got \\"MutSet<str>\\" instead
   --> ../../../../examples/tests/invalid/mut_container_types.w:14:23
   |
14 | let s5: MutSet<num> = s4;
   |                       ^^ Expected type to be \\"MutSet<num>\\", but got \\"MutSet<str>\\" instead


error: Unknown symbol \\"some_method\\"
   --> ../../../../examples/tests/invalid/mut_container_types.w:15:4
   |
15 | s3.some_method();
   |    ^^^^^^^^^^^ Unknown symbol \\"some_method\\"


error: Expected type to be \\"num\\", but got \\"str\\" instead
   --> ../../../../examples/tests/invalid/mut_container_types.w:18:31
   |
18 | let m1 = MutMap<num>{\\"hello\\": \\"world\\"};
   |                               ^^^^^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected \\"Array\\" type, found \\"MutMap<str>\\"
   --> ../../../../examples/tests/invalid/mut_container_types.w:20:10
   |
20 | let m2 = MutMap<str>[\\"hello\\", \\"world\\"];
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected \\"Array\\" type, found \\"MutMap<str>\\"


error: Expected type to be \\"MutMap<num>\\", but got \\"Map<str>\\" instead
   --> ../../../../examples/tests/invalid/mut_container_types.w:22:23
   |
22 | let m3: MutMap<num> = {\\"hello\\": \\"world\\"};
   |                       ^^^^^^^^^^^^^^^^^^ Expected type to be \\"MutMap<num>\\", but got \\"Map<str>\\" instead


error: Expected type to be \\"MutMap<str>\\", but got \\"MutMap<num>\\" instead
   --> ../../../../examples/tests/invalid/mut_container_types.w:25:23
   |
25 | let m5: MutMap<str> = m4;
   |                       ^^ Expected type to be \\"MutMap<str>\\", but got \\"MutMap<num>\\" instead

"
`;

exports[`optionals.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Expected type to be \\"num\\", but got \\"num?\\" instead
  --> ../../../../examples/tests/invalid/optionals.w:7:3
  |
7 | f(x);
  |   ^ Expected type to be \\"num\\", but got \\"num?\\" instead

"
`;

exports[`primitives.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Unexpected expression \\"structured_access_expression\\"
  --> ../../../../examples/tests/invalid/primitives.w:5:7
  |
5 | print(y[0]);
  |       ^^^^ Unexpected expression \\"structured_access_expression\\"


error: Unknown symbol \\"blabla\\"
  --> ../../../../examples/tests/invalid/primitives.w:9:16
  |
9 | let join = arr.blabla(\\",\\");
  |                ^^^^^^ Unknown symbol \\"blabla\\"


error: Unknown symbol \\"push\\"
   --> ../../../../examples/tests/invalid/primitives.w:11:5
   |
11 | arr.push(4);
   |     ^^^^ Unknown symbol \\"push\\"


error: Expected type to be \\"str\\", but got \\"num\\" instead
   --> ../../../../examples/tests/invalid/primitives.w:13:14
   |
13 | let n: str = arr.at(0);
   |              ^^^^^^^^^ Expected type to be \\"str\\", but got \\"num\\" instead

"
`;

exports[`reassign_to_nonreassignable.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: ';' expected.
   --> ../../../../examples/tests/invalid/reassign_to_nonreassignable.w:21:2
   |
21 | }
   |  ^ ';' expected.


error: Variable x is not reassignable 
  --> ../../../../examples/tests/invalid/reassign_to_nonreassignable.w:3:1
  |
3 | x = x + 1;
  | ^^^^^^^^^^ Variable x is not reassignable 


error: Variable this.f is not reassignable 
   --> ../../../../examples/tests/invalid/reassign_to_nonreassignable.w:13:5
   |
13 |     this.f = this.f + 1;
   |     ^^^^^^^^^^^^^^^^^^^^ Variable this.f is not reassignable 


error: Variable arg is not reassignable 
   --> ../../../../examples/tests/invalid/reassign_to_nonreassignable.w:19:3
   |
19 |   arg = 0;
   |   ^^^^^^^^ Variable arg is not reassignable 

"
`;

exports[`resource_access_field_as_method.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: should be a function or method
  --> ../../../../examples/tests/invalid/resource_access_field_as_method.w:8:1
  |
8 | x.name();
  | ^^^^^^ should be a function or method

"
`;

exports[`resource_inflight.w > wing test (--target sim) - invalid > stderr 1`] = `"Cannot read properties of null (reading 'file_id')"`;

exports[`sorted_errors_no_span.w > wing test (--target sim) - invalid > stderr 1`] = `"Cannot read properties of null (reading 'file_id')"`;

exports[`statements_if.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Unexpected unary operator \\"--\\"
  --> ../../../../examples/tests/invalid/statements_if.w:2:1
  |
2 | --n;
  | ^^^ Unexpected unary operator \\"--\\"


error: Expected type to be \\"bool\\", but got \\"num\\" instead
  --> ../../../../examples/tests/invalid/statements_if.w:5:5
  |
5 | if !n {}
  |     ^ Expected type to be \\"bool\\", but got \\"num\\" instead


error: Expected type to be \\"bool\\", but got \\"num\\" instead
  --> ../../../../examples/tests/invalid/statements_if.w:8:5
  |
8 | if !n || true {}
  |     ^ Expected type to be \\"bool\\", but got \\"num\\" instead

"
`;

exports[`struct_expansion.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Unexpected 'keyword_argument'.
   --> ../../../../examples/tests/invalid/struct_expansion.w:11:15
   |
11 |   bucket1.put(file: \\"file.txt\\", \\"data\\");
   |               ^^^^^^^^^^^^^^^^ Unexpected 'keyword_argument'.


error: \\"bublic\\" is not a field of \\"BucketProps\\"
  --> ../../../../examples/tests/invalid/struct_expansion.w:3:15
  |
3 | let bucket1 = new cloud.Bucket(bublic: false, public: true);
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \\"bublic\\" is not a field of \\"BucketProps\\"


error: Expected between 0 and 1 arguments but got 2 when instantiating \\"Bucket\\"
  --> ../../../../examples/tests/invalid/struct_expansion.w:7:15
  |
7 | let bucket2 = new cloud.Bucket(2, public: true);
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected between 0 and 1 arguments but got 2 when instantiating \\"Bucket\\"


error: Expected type to be \\"BucketProps?\\", but got \\"num\\" instead
  --> ../../../../examples/tests/invalid/struct_expansion.w:7:32
  |
7 | let bucket2 = new cloud.Bucket(2, public: true);
  |                                ^ Expected type to be \\"BucketProps?\\", but got \\"num\\" instead


error: Expected 2 arguments but got 1
   --> ../../../../examples/tests/invalid/struct_expansion.w:11:3
   |
11 |   bucket1.put(file: \\"file.txt\\", \\"data\\");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected 2 arguments but got 1

"
`;

exports[`try_no_catch_or_finally.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Missing \`catch\` or \`finally\` blocks for this try statement
  --> ../../../../examples/tests/invalid/try_no_catch_or_finally.w:1:1
  |  
1 | / try {
2 | |   print(\\"Hello World\\");
3 | | }
  | \\\\-^ Missing \`catch\` or \`finally\` blocks for this try statement

"
`;

exports[`types_strings_arithmetic.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Expected type to be \\"num\\", but got \\"str\\" instead
  --> ../../../../examples/tests/invalid/types_strings_arithmetic.w:1:10
  |
1 | let e0 = \\"2\\" + \\"2\\";
  |          ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected type to be \\"num\\", but got \\"str\\" instead
  --> ../../../../examples/tests/invalid/types_strings_arithmetic.w:1:16
  |
1 | let e0 = \\"2\\" + \\"2\\";
  |                ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected type to be \\"num\\", but got \\"str\\" instead
  --> ../../../../examples/tests/invalid/types_strings_arithmetic.w:4:14
  |
4 | let e1 = 2 + \\"2\\";
  |              ^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected type to be \\"num\\", but got \\"str\\" instead
  --> ../../../../examples/tests/invalid/types_strings_arithmetic.w:7:10
  |
7 | let e2 = 2 == \\"2\\";
  |          ^^^^^^^^ Expected type to be \\"num\\", but got \\"str\\" instead


error: Expected type to be \\"num\\", but got \\"str\\" instead
   --> ../../../../examples/tests/invalid/types_strings_arithmetic.w:13:10
   |
13 | let e3 = \\"\${str_example}!\\" * num_example;
   |          ^^^^^^^^^^^^^^^^^ Expected type to be \\"num\\", but got \\"str\\" instead

"
`;

exports[`unimplemented_grammar.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: builtin \\"void\\" is not supported yet see https://github.com/winglang/wing/issues/432
  --> ../../../../examples/tests/invalid/unimplemented_grammar.w:1:8
  |
1 | let a: void = nil;
  |        ^^^^ builtin \\"void\\" is not supported yet see https://github.com/winglang/wing/issues/432


error: builtin \\"any\\" is not supported yet see https://github.com/winglang/wing/issues/434
  --> ../../../../examples/tests/invalid/unimplemented_grammar.w:2:8
  |
2 | let b: any = 0;
  |        ^^^ builtin \\"any\\" is not supported yet see https://github.com/winglang/wing/issues/434


error: builtin container type \\"Promise\\" is not supported yet see https://github.com/winglang/wing/issues/529
  --> ../../../../examples/tests/invalid/unimplemented_grammar.w:3:20
  |
3 | let some_promise = Promise<str>{};
  |                    ^^^^^^^^^^^^ builtin container type \\"Promise\\" is not supported yet see https://github.com/winglang/wing/issues/529


error: expression \\"defer_expression\\" is not supported yet see https://github.com/winglang/wing/issues/116
  --> ../../../../examples/tests/invalid/unimplemented_grammar.w:4:9
  |
4 | let c = defer some_promise();
  |         ^^^^^^^^^^^^^^^^^^^^ expression \\"defer_expression\\" is not supported yet see https://github.com/winglang/wing/issues/116


error: expression \\"await_expression\\" is not supported yet see https://github.com/winglang/wing/issues/116
  --> ../../../../examples/tests/invalid/unimplemented_grammar.w:5:9
  |
5 | let d = await c;
  |         ^^^^^^^ expression \\"await_expression\\" is not supported yet see https://github.com/winglang/wing/issues/116

"
`;

exports[`unknown_symbol.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Unknown symbol \\"clod\\"
  --> ../../../../examples/tests/invalid/unknown_symbol.w:3:18
  |
3 | let bucket = new clod.Bucket();
  |                  ^^^^ Unknown symbol \\"clod\\"


error: Unknown symbol \\"y\\"
  --> ../../../../examples/tests/invalid/unknown_symbol.w:6:13
  |
6 | let x = 2 + y;
  |             ^ Unknown symbol \\"y\\"


error: Unknown symbol \\"method_which_is_not_part_of_bucket_api\\"
   --> ../../../../examples/tests/invalid/unknown_symbol.w:17:25
   |
17 |     return this._bucket.method_which_is_not_part_of_bucket_api(id);
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unknown symbol \\"method_which_is_not_part_of_bucket_api\\"

"
`;

exports[`use_before_defined.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Unknown symbol \\"y\\"
  --> ../../../../examples/tests/invalid/use_before_defined.w:1:10
  |
1 | print(\\"\${y}\\"); // Access y before it's defined
  |          ^ Unknown symbol \\"y\\"


error: Symbol \\"x\\" used before being defined
  --> ../../../../examples/tests/invalid/use_before_defined.w:5:12
  |
5 |   print(\\"\${x}\\"); // Access x before it's defined (even though it's defined in an outer scope)
  |            ^ Symbol \\"x\\" used before being defined

"
`;

exports[`variable_scoping.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Unknown symbol \\"x\\"
  --> ../../../../examples/tests/invalid/variable_scoping.w:6:11
  |
6 |   let z = x;
  |           ^ Unknown symbol \\"x\\"

"
`;

exports[`void_in_expression_position.w > wing test (--target sim) - invalid > stderr 1`] = `
"error: Expression must be a class or resource instance to access property \\"get\\", instead found type \\"void\\"
  --> ../../../../examples/tests/invalid/void_in_expression_position.w:1:1
  |
1 | print(\\"hey\\").get(\\"x\\");
  | ^^^^^^^^^^^^ Expression must be a class or resource instance to access property \\"get\\", instead found type \\"void\\"


error: Expected type to be \\"num\\", but got \\"void\\" instead
  --> ../../../../examples/tests/invalid/void_in_expression_position.w:7:13
  |
7 | let y = 5 + print(\\"hello\\");
  |             ^^^^^^^^^^^^^^ Expected type to be \\"num\\", but got \\"void\\" instead


error: Cannot assign expression of type \\"void\\" to a variable
   --> ../../../../examples/tests/invalid/void_in_expression_position.w:11:5
   |
11 | let z = returns_nothing();
   |     ^ Cannot assign expression of type \\"void\\" to a variable

"
`;
